Стили для калькулятора

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Калькулятор рассрочки</title>
 
+    <link href="normalize.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -34,11 +35,13 @@
         </form>
       </div>
       <div class="info-wrap">
-        <div class="name">Беспроцентная рассрочка на 12 кварталов</div>
-        <div class="every-date date"><span>Ежеквартальный платеж</span>с I кв. 2016 по IV кв. 2018 года </div>
-        <div class="every-pay pay"><span>210 040</span>р./мес.</div>
-        <div class="last-date date"><span>Остаточный платеж</span>с I кв. 2016 по IV кв. 2018 года </div>
-        <div class="last-pay pay"><span>540 000</span>р./мес.</div>
+      	<div class="info-block">
+        	<div class="name">Беспроцентная рассрочка на 12 кварталов</div>
+        	<div class="every-date date"><span>Ежеквартальный платеж</span>с I кв. 2016 по IV кв. 2018 года </div>
+        	<div class="every-pay pay"><span>210 040</span> ₽/мес.</div>
+        	<div class="last-date date"><span>Остаточный платеж</span>с I кв. 2016 по IV кв. 2018 года </div>
+        	<div class="last-pay pay"><span>540 000</span> ₽/мес.</div>
+        </div>
       </div>
     </div>
 
